# DataCamp

./: README.md  pyproject.toml
2. Python Intro and Math Foundation/Final/: 2. Calculus.ipynb  Linear Algebra  Math Foundation
3. EDA and Visualization/1. Visualization/Matlab and Seaborn/: Visualization using Matplotlib and Seaborn.ipynb
5. MLOps/2. End-to-End ML/: heart_disease.ipynb
7. DevelopingLargeLanguageModels/1.IntroductiontoDLWithPyTorch/4. Evaluation/: eval.ipynb
7. DevelopingLargeLanguageModels/2.IntermediateDeepLearningWithPytorch/1. Training Robust NN/: train_nn.ipynb
7. DevelopingLargeLanguageModels/2.IntermediateDeepLearningWithPytorch/2. Images and CNN/: handling_images.ipynb
7. DevelopingLargeLanguageModels/2.IntermediateDeepLearningWithPytorch/3. RNNs/: handling_sequences.ipynb
7. DevelopingLargeLanguageModels/4. IntroductionToLLMsInPython/: introtollm.ipynb
7. LLM Pytorch/: README.md
7. LLM Pytorch/1.IntroductiontoDLWithPyTorch/2. Training/: train.ipynb
8. CodeAlongs/1.Build AI Applications with HuggingFace/2. NLP application/: notebook-solution.ipynb
8. CodeAlongs/2.RAG - GPT and Pinecone/2. RAG/: notebook-solution.ipynb
8. CodeAlongs/4. MLFlow/: project.txt
CodeAlongs/: huggingface.ipynb
CodeAlongs/1.Build AI Applications with HuggingFace/1. Huggingface/: notebook-solution-2.ipynb  notebook-solution.ipynb
DevelopingLargeLanguageModels/2.IntermediateDeepLearningWithPytorch/: README.md
MLOps/Shell/: commands.ipynb
mlruns/0/: meta.yaml
mlruns/349355804453482565/: meta.yaml
(+8 files in other folders)
