[tool.poetry]
name = "datacamp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
huggingface-hub = "^0.23.2"
transformers = "^4.41.1"
datasets = "^2.19.1"
ipykernel = "^6.29.4"
pyarrow = "15"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
mlflow = "^2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
